<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Расчёт показаний счётчиков</string>
    <string name="text_tab1">Вода</string>
    <string name="text_tab2">Свет</string>
    <string name="text_tab3">Газ</string>
    <string name="text_tab4">История</string>
    <string name="textKitchen">Кухня</string>
    <string name="textKOld">Старые</string>
    <string name="textKNew">Новые</string>
    <string name="textBathroom">Ванная</string>
    <string name="textBOld">Старые</string>
    <string name="textBNew">Новые</string>
    <string name="textPrice">Цена</string>
    <string name="textPRub">Руб/куб.м</string>
    <string name="textResult">ИТОГ</string>
    <string name="textRRub">Руб</string>
    <string name="textElectricity">Электроэнергия</string>
    <string name="textGas">Газ</string>    
    <string name="textEOld">Старые </string>        
    <string name="textENew">Новые </string>    
    <string name="textEPrice">Цена</string>    
	<string name="textEPriceKW">Руб/квтч</string>    
    <string name="textGOld">Старые </string>        
    <string name="textGNew">Новые </string>    
    <string name="textGPrice">Цена</string>    
	<string name="textGPriceM3">Руб/куб.м</string>		
    <string name="buttonCalc">Произвести расчёт</string>
    <string name="buttonClearData">Очистить данные</string>
    <string name="buttonSaveData">Сохранить данные</string>
    <string name="buttonPurgeDB">Очистить БД</string>
    <string name="textOverall">Итоговая сумма</string>
    <string name="textForecast">Прогноз расхода за месяц</string>
    <string name="cold">холодная</string>
    <string name="hot">горячая</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="warning">Предупреждение</string>
    <string name="clear_confirmation">Вы действительно хотите очистить данные?</string>
    <string name="invalid_data">НЕКОРРЕКТНЫЕ ДАННЫЕ</string>
    <string name="data_saved">Показания счётчиков сохранены</string>
    <string name="save_data">Сохранить данные?</string>
    <string name="div_by_0">Недостаточно дней для расчёта прогноза</string>
    <string name="date_parsing_error">Ошибка при обработке дат</string>
    <string name="emptyDB">В БД пусто, загружено из параметров </string>
    <string name="dateFormat">yyyy.MM.dd</string>
    <string name="databaseName">water_meter_calc_DB</string>
    <string name="tableNameMeasures">measures</string>
    <string name="tableNameElectricity">electricity</string>    
	<string name="tableNameGas">gas</string>    
    <string name="sqlCreateTableMeasures">create table measures (id integer primary key autoincrement, date text, kcold text, khot text, bcold text, bhot text, prcold text, prhot text);</string>
    <string name="sqlCreateTableElectricity">create table electricity (id integer primary key autoincrement, date text, value text, price text);</string>    
    <string name="sqlCreateTableGas">create table gas (id integer primary key autoincrement, date text, value text, price text);</string>    
    <string name="tab41date">дата</string>
    <string name="tab41kCold">кх</string>
    <string name="tab41kHot">кг</string>
    <string name="tab41bCold">вх</string>
    <string name="tab41bHot">вг</string>
    <string name="tab42date">дата</string>
    <string name="tab42Value">показания</string>
    <string name="tab42Price">цена</string>    
    <string name="tab43date">дата</string>
    <string name="tab43Value">показания</string>
    <string name="tab43Price">цена</string>    
    <string name="tab4Forecast">прогноз</string>    
    <string name="tab4AvgText">В среднем в месяц</string>        
</resources>