<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none" >
    <LinearLayout               
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
		<TabHost
 			android:id="@android:id/tabhost"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent">
			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:orientation="vertical">        
        		<TabWidget
 					android:id="@android:id/tabs"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content">
				</TabWidget>
				<FrameLayout
 					android:id="@android:id/tabcontent"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent">
 					<LinearLayout
 						android:id="@+id/tab1"
 						android:layout_width="match_parent" 						
 						android:orientation="vertical" 						
 						android:layout_height="match_parent">            		
						<LinearLayout
				 			android:layout_width="match_parent"
            				android:layout_height="wrap_content" >
            				<Button
	                			android:id="@+id/buttonClearData"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="1"
                				android:text="@string/buttonClearData" >
	            			</Button>
            				<Button
		                		android:id="@+id/buttonSaveData"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="1"
                				android:text="@string/buttonSaveData" >
            				</Button>
        				</LinearLayout>
        				<LinearLayout
	            			android:layout_width="match_parent"
							
							android:orientation="horizontal"
								            			
            				android:layout_height="wrap_content" >
            				<TextView
	                			android:id="@+id/textOldDate"
                				android:layout_width="0.5in"
                				android:layout_height="wrap_content"
                				android:layout_weight="1" >
            				</TextView>
            				<TextView
	                			android:id="@+id/textCold"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
			                	android:background="@color/cold"
                				android:gravity="center"
                				android:text="@string/cold"
                				android:textAlignment="gravity" >
            				</TextView>
            				<TextView
	                			android:id="@+id/textHot"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:background="@color/hot"
                				android:gravity="center"
                				android:text="@string/hot"
                				android:textAlignment="gravity" >
            				</TextView>
        				</LinearLayout>
        				<LinearLayout
	            			android:layout_width="match_parent"
            				android:layout_height="match_parent"
            				android:orientation="vertical" >
        				</LinearLayout>
        				<TextView
	            			android:id="@+id/textKitchen"
            				android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:gravity="center"
            				android:text="@string/textKitchen"
            				android:textSize="25dip" >
        				</TextView>
        				<LinearLayout
	            			android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:orientation="horizontal" >
            				<TextView
	                			android:id="@+id/textKOld"
                				android:layout_width="0.5in"
                				android:layout_height="wrap_content"
                				android:layout_weight="1"
                				android:text="@string/textKOld" >
            				</TextView>
            				<EditText
	            			    android:id="@+id/editKitchenOldCold"
            			  		android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
            				<EditText
	                			android:id="@+id/editKitchenOldHot"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
        				</LinearLayout>
			        	<LinearLayout
				            android:layout_width="match_parent"
			            	android:layout_height="wrap_content"
            				android:orientation="horizontal" >
            				<TextView
	                			android:id="@+id/textKNew"
                				android:layout_width="0.5in"
                				android:layout_height="wrap_content"
                				android:layout_weight="1"
                				android:text="@string/textKNew" >
            				</TextView>
            				<EditText
	                			android:id="@+id/editKitchenNewCold"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
            				<EditText
	                			android:id="@+id/editKitchenNewHot"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
        				</LinearLayout>
        				<TextView
	            			android:id="@+id/textBathroom"
            				android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:gravity="center"
            				android:text="@string/textBathroom"
            				android:textSize="25dip" >
        				</TextView>
        				<LinearLayout
	            			android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:orientation="horizontal" >
            				<TextView
	                			android:id="@+id/textBOld"
                				android:layout_width="0.5in"
                				android:layout_height="wrap_content"
                				android:layout_weight="1"
                				android:text="@string/textBOld" >
            				</TextView>
            				<EditText
	                			android:id="@+id/editBathroomOldCold"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
            				<EditText
	                			android:id="@+id/editBathroomOldHot"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
        				</LinearLayout>
        				<LinearLayout
	            			android:layout_width="match_parent"
            				android:layout_height="wrap_content"
	           				android:orientation="horizontal" >
	   			        	<TextView
				                android:id="@+id/textBNew"
                				android:layout_width="0.5in"
                				android:layout_height="wrap_content"
                				android:layout_weight="1"
                				android:text="@string/textBNew" >
            				</TextView>
            				<EditText
	                			android:id="@+id/editBathroomNewCold"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
            				<EditText
	                			android:id="@+id/editBathroomNewHot"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
        				</LinearLayout>
        				<TextView
	            			android:id="@+id/textPrice"
            				android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:gravity="center"
            				android:text="@string/textPrice"
            				android:textAlignment="gravity"
            				android:textSize="25dip" >
        				</TextView>
        				<LinearLayout
	            			android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:orientation="horizontal" >
            				<TextView
	                			android:id="@+id/textPRub"
                				android:layout_width="0.5in"
                				android:layout_height="wrap_content"
                				android:layout_weight="1"
                				android:text="@string/textPRub" >
            				</TextView>
            				<EditText
	                			android:id="@+id/editPriceCold"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
            				<EditText
	                			android:id="@+id/editPriceHot"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
        				</LinearLayout>
        				<Button
	            			android:id="@+id/buttonCalc"
            				android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:text="@string/buttonCalc" >
        				</Button>
        				<TextView
	            			android:id="@+id/textResult"
            				android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:gravity="center"
            				android:text="@string/textResult"
            				android:textSize="25dip" >
        				</TextView>
        				<LinearLayout
	            			android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:orientation="horizontal" >
            				<TextView
	                			android:id="@+id/textRRub"
                				android:layout_width="0.5in"
                				android:layout_height="wrap_content"
                				android:layout_weight="1"
	                			android:text="@string/textRRub" >
            				</TextView>
            				<EditText
	                			android:id="@+id/editResultCold"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:background="@color/cold"
                				android:gravity="center"
            			    	android:textAlignment="gravity" >
            				</EditText>
            				<EditText
	                			android:id="@+id/editResultHot"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:background="@color/hot"
                				android:gravity="center"
                				android:textAlignment="gravity" >
            				</EditText>
        				</LinearLayout>
        				<LinearLayout
	            			android:layout_width="match_parent"
            				android:layout_height="wrap_content" >          			
            				<TextView
	                			android:id="@+id/textOverall"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="1"
                				android:text="@string/textOverall"
                				android:textSize="20dip" >
            				</TextView>
            				<TextView
	                			android:id="@+id/textOverallValue"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textSize="20dip" >
            				</TextView>
        				</LinearLayout>
        				<LinearLayout
	            			android:layout_width="match_parent"
            				android:layout_height="wrap_content" >
            				<TextView
	                			android:id="@+id/textForecast"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="1"
                				android:text="@string/textForecast"
                				android:textSize="20dip" >
            				</TextView>               
            				<TextView
	                			android:id="@+id/textForecastValue"
                				android:layout_width="wrap_content"
                				android:layout_height="wrap_content"
                				android:layout_weight="3"
                				android:gravity="center"
                				android:textSize="20dip" >
            				</TextView>
        		    	</LinearLayout>
        			</LinearLayout>
        			<LinearLayout
 						android:id="@+id/tab2"
 						android:layout_width="match_parent"
 						android:orientation="vertical" 						
 						android:layout_height="match_parent">
					</LinearLayout>
					<LinearLayout	
 						android:id="@+id/tab3"
 						android:layout_width="match_parent"
 						android:orientation="vertical" 						
 						android:layout_height="match_parent">
					</LinearLayout>					
				</FrameLayout>
			</LinearLayout>
		</TabHost>
	</LinearLayout>		
</ScrollView>